<resources>
    <string name="app_name">Triggers</string>

    <string name="start_triggers">Start Triggers</string>
    <string name="stop_triggers">Stop Triggers</string>

    <string name="first_trigger">First Trigger</string>
    <string name="placeholder">Stuff here!</string>
    <string name="pref_header_general">Steps</string>
    <string name="pref_header_locations">Locations</string>
    <string name="pref_header_geofences">Geofences</string>
    <string name="pref_title_filter_by_date">On or Off</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_locations_label">Locations</string>
    <string name="pref_location_longitude">40.446195</string>
    <string name="pref_longitude">Longitude</string>
    <string name="pref_location_latitude">-79.982195</string>
    <string name="pref_latitude">Latitude</string>
    <string name="pref_home_location">Home location</string>
    <string name="pref_work_location">Work location</string>
    <string name="pref_custom_location">Custom location</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="use_home_current_location_summary">Use your current location to set the latitude and longitude for your home.</string>
    <string name="home_location_button">home_location_button</string>
    <string name="use_work_current_location_summary">Use your current location to set the latitude and longitude for your work.</string>
    <string name="work_location_button">work_location_button</string>
    <string name="use_custom_current_location_summary">Use your current location to set the latitude and longitude for your custom location.</string>
    <string name="custom_location_button">custom_location_button</string>
    <string name="home_address">Use Home Address for Lat and Long</string>
    <string name="work_address">Use Work Address for Lat and Long</string>
    <string name="custom_address">Use Custom Address for Lat and Long</string>
</resources>
